--- a/start_page.html
+++ b/start_page.html
@@ -167,6 +167,81 @@ tr:nth-child(even) {
                                     <td>ICAO Code</td>
                                     <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
                                 </tr>
+                                <tr>
+                                    <td>22</td>
+                                    <td>Continuation Record №</td>
+                                    <td><a href="References/5_16_Cont_Record.png" target="_blank">5.16</a></td>
+                                </tr>
+                                <tr>
+                                    <td>23-27</td>
+                                    <td>VOR Frequency</td>
+                                    <td><a href="References/5_34_VOR_Frequency.png" target="_blank">5.34</a></td>
+                                </tr>
+                                <tr>
+                                    <td>28-32</td>
+                                    <td>NAVAID Class</td>
+                                    <td><a href="References/5_35_NAVAID_Class.png" target="_blank">5.35</a></td>
+                                </tr>
+                                <tr>
+                                    <td>33-41</td>
+                                    <td>VOR Latitude</td>
+                                    <td><a href="References/5_36_Latitude.png" target="_blank">5.36</a></td>
+                                </tr>
+                                <tr>
+                                    <td>42-51</td>
+                                    <td>VOR Longitude</td>
+                                    <td><a href="References/5_37_Longitude.png" target="_blank">5.37</a></td>
+                                </tr>
+                                <tr>
+                                    <td>52-55</td>
+                                    <td>DME Ident</td>
+                                    <td><a href="References/5_38_DME_Ident.png" target="_blank">5.38</a></td>
+                                </tr>
+                                <tr>
+                                    <td>56-64</td>
+                                    <td>DME Latitude</td>
+                                    <td><a href="References/5_36_Latitude.png" target="_blank">5.36</a></td>
+                                </tr>
+                                <tr>
+                                    <td>65-74</td>
+                                    <td>DME Longitude</td>
+                                    <td><a href="References/5_37_Longitude.png" target="_blank">5.37</a></td>
+                                </tr>
+                                <tr>
+                                    <td>75-79</td>
+                                    <td>Station Declination</td>
+                                    <td><a href="References/5_66_Station_Declination.png" target="_blank">5.66</a></td>
+                                </tr>
+                                <tr>
+                                    <td>80-84</td>
+                                    <td>DME Elevation</td>
+                                    <td><a href="References/5_40_DME_Elevation.png" target="_blank">5.40</a></td>
+                                </tr>
+                                <tr>
+                                    <td>85</td>
+                                    <td>Figure of Merit</td>
+                                    <td><a href="References/5_149_Figure_of_Merit.png" target="_blank">5.149</a></td>
+                                </tr>
+                                <tr>
+                                    <td>86-87</td>
+                                    <td>ILS/DME Bias</td>
+                                    <td><a href="References/5_90_ILS_DME_Bias.png" target="_blank">5.90</a></td>
+                                </tr>
+                                <tr>
+                                    <td>88-90</td>
+                                    <td>Frequency Protection</td>
+                                    <td><a href="References/5_150_Frequency_Protection.png" target="_blank">5.150</a></td>
+                                </tr>
+                                <tr>
+                                    <td>91-93</td>
+                                    <td>Datum Code</td>
+                                    <td><a href="References/5_197_Datum_Code.png" target="_blank">5.197</a></td>
+                                </tr>
+                                <tr>
+                                    <td>94-123</td>
+                                    <td>VOR Name</td>
+                                    <td><a href="References/5_71_Name_Field.png" target="_blank">5.71</a></td>
+                                </tr>
                             </table>
                         </details>
                             <details>
