--- a/start_page.html
+++ b/start_page.html
@@ -245,8 +245,120 @@ tr:nth-child(even) {
                             </table>
                         </details>
                             <details>
-                            <summary>6 - B - NDB Navaid (DB)</summary>
-                            <img src="Tables/DB_NDB_NAVAID.png" alt="DB_NDB_NAVAID">
+                            <summary>6 - B - NDB NAVAID (DB)</summary>
+                                <table>
+								<caption><a href="Tables/DB_NDB_NAVAID.png" target="_blank">NDB NAVAID Primary Records</a></caption>
+                                <tr>
+                                    <th>Column</th>
+                                    <th>Field Name</th>
+                                    <th>Reference</th>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Record Type</td>
+                                    <td><a href="References/5_2_Record_Type.png" target="_blank">5.2</a></td>
+                                </tr>
+								 <tr>
+                                    <td>2-4</td>
+                                    <td>Customer/Area Code</td>
+                                    <td><a href="References/5_3_Customer_Area_Code.png" target="_blank">5.3</a></td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+								<tr>
+                                    <td>7-10</td>
+                                    <td>Airport ICAO Identifier</td>
+                                    <td><a href="References/5_6_Airport_Heliport_Identifier.png" target="_blank">5.6</a></td>
+                                </tr>
+                                <tr>
+                                    <td>11-12</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>13</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>14-17</td>
+                                    <td>NDB Identifier</td>
+                                    <td><a href="References/5_33_VOR_NDB_Identifier.png" target="_blank">5.33</a></td>
+                                </tr>
+                                <tr>
+                                    <td>18-19</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>20-21</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>22</td>
+                                    <td>Continuation Record №</td>
+                                    <td><a href="References/5_16_Cont_Record.png" target="_blank">5.16</a></td>
+                                </tr>
+                                <tr>
+                                    <td>23-27</td>
+                                    <td>NDB Frequency</td>
+                                    <td><a href="References/5_34_VOR_Frequency.png" target="_blank">5.34</a></td>
+                                </tr>
+                                <tr>
+                                    <td>28-32</td>
+                                    <td>NDB Class</td>
+                                    <td><a href="References/5_35_NAVAID_Class.png" target="_blank">5.35</a></td>
+                                </tr>
+                                <tr>
+                                    <td>33-41</td>
+                                    <td>NDB Latitude</td>
+                                    <td><a href="References/5_36_Latitude.png" target="_blank">5.36</a></td>
+                                </tr>
+                                <tr>
+                                    <td>42-51</td>
+                                    <td>NDB Longitude</td>
+                                    <td><a href="References/5_37_Longitude.png" target="_blank">5.37</a></td>
+                                </tr>
+                                <tr>
+                                    <td>52-74</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>75-79</td>
+                                    <td>Magnetic Variation</td>
+                                    <td><a href="References/5_39_Magnetic_Variation.png" target="_blank">5.39</a></td>
+                                </tr>
+                                <tr>
+                                    <td>80-85</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>86-90</td>
+                                    <td>Reserved</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>91-93</td>
+                                    <td>Datum Code</td>
+                                    <td><a href="References/5_197_Datum_Code.png" target="_blank">5.197</a></td>
+                                </tr>
+                                <tr>
+                                    <td>94-123</td>
+                                    <td>VOR Name</td>
+                                    <td><a href="References/5_71_Name_Field.png" target="_blank">5.71</a></td>
+                                </tr>
+                            </table>
                         </details>
                         </ul>
                 </details>
