--- a/start_page.html
+++ b/start_page.html
@@ -368,7 +368,134 @@ tr:nth-child(even) {
                     <ul>
                         <details>
                             <summary>6 - A - Waypoints (EA)</summary>
-                            <img src="Tables/EA_Waypoints.png" alt="EA_Waypoints">
+                            <table>
+								<caption><a href="Tables/EA_Waypoints.png" target="_blank">Waypoint Primary Records</a></caption>
+                                <tr>
+                                    <th>Column</th>
+                                    <th>Field Name</th>
+                                    <th>Reference</th>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Record Type</td>
+                                    <td><a href="References/5_2_Record_Type.png" target="_blank">5.2</a></td>
+                                </tr>
+								 <tr>
+                                    <td>2-4</td>
+                                    <td>Customer/Area Code</td>
+                                    <td><a href="References/5_3_Customer_Area_Code.png" target="_blank">5.3</a></td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5 (Note 1)</a></td>
+                                </tr>
+								<tr>
+                                    <td>7-10</td>
+                                    <td>Region Code</td>
+                                    <td><a href="References/5_41_Region_Code.png" target="_blank">5.41</a></td>
+                                </tr>
+                                <tr>
+                                    <td>11-12</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>13</td>
+                                    <td>Subsection</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5 (Note 1)</a></td>
+                                </tr>
+                                <tr>
+                                    <td>14-18</td>
+                                    <td>Waypoint Identifier</td>
+                                    <td><a href="References/5_13_Fix_Identifier.png" target="_blank">5.13</a></td>
+                                </tr>
+                                <tr>
+                                    <td>19</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>20-21</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>22</td>
+                                    <td>Continuation Record №</td>
+                                    <td><a href="References/5_16_Cont_Record.png" target="_blank">5.16</a></td>
+                                </tr>
+                                <tr>
+                                    <td>23-26</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>27-29</td>
+                                    <td>Waypoint Type</td>
+                                    <td><a href="References/5_42_Waypoint_Type.png" target="_blank">5.42</a></td>
+                                </tr>
+                                <tr>
+                                    <td>30-31</td>
+                                    <td>Waypoint Usage</td>
+                                    <td><a href="References/5_82_Waypoint_Usage.png" target="_blank">5.82</a></td>
+                                </tr>
+                                <tr>
+                                    <td>32</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>33-41</td>
+                                    <td>Waypoint Latitude</td>
+                                    <td><a href="References/5_36_Latitude.png" target="_blank">5.36</a></td>
+                                </tr>
+                                <tr>
+                                    <td>42-51</td>
+                                    <td>Waypoint Longitude</td>
+                                    <td><a href="References/5_37_Longitude.png" target="_blank">5.37</a></td>
+                                </tr>
+                                <tr>
+                                    <td>52-74</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>75-79</td>
+                                    <td>Dynamic Mag. Variation</td>
+                                    <td><a href="References/5_39_Magnetic_Variation.png" target="_blank">5.39</a></td>
+                                </tr>
+                                <tr>
+                                    <td>80-84</td>
+                                    <td>Reserved</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>85-87</td>
+                                    <td>Datum Code</td>
+                                    <td><a href="References/5_197_Datum_Code.png" target="_blank">5.197</a></td>
+                                </tr>
+                                <tr>
+                                    <td>88-95</td>
+                                    <td>Reserved</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>96-98</td>
+                                    <td>Name Format Indicator</td>
+                                    <td><a href="References/5_196_Name_Format_Indicator.png" target="_blank">5.196</a></td>
+                                </tr>
+                                <tr>
+                                    <td>99-123</td>
+                                    <td>Waypoint Name / Description</td>
+                                    <td><a href="References/5_43_Waypoint_Name_Description.png" target="_blank">5.43</a></td>
+                                </tr>
+                            </table>
                         </details>
                         <details>
                             <summary>6 - M - Airway Markers (EM)</summary>
