--- a/start_page.html
+++ b/start_page.html
@@ -499,7 +499,129 @@ tr:nth-child(even) {
                         </details>
                         <details>
                             <summary>6 - M - Airway Markers (EM)</summary>
-                            <img src="Tables/EM_Airways.png" alt="EM_Airways">
+                            <table>
+								<caption><a href="Tables/EM_Airways.png" target="_blank">Airway Marker Primary Records</a></caption>
+                                <tr>
+                                    <th>Column</th>
+                                    <th>Field Name</th>
+                                    <th>Reference</th>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Record Type</td>
+                                    <td><a href="References/5_2_Record_Type.png" target="_blank">5.2</a></td>
+                                </tr>
+								 <tr>
+                                    <td>2-4</td>
+                                    <td>Customer/Area Code</td>
+                                    <td><a href="References/5_3_Customer_Area_Code.png" target="_blank">5.3</a></td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+								<tr>
+                                    <td>7-13</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+								<tr>
+                                    <td>14-17</td>
+                                    <td>Marker Identifier</td>
+                                    <td><a href="References/5_110_Marker_Ident.png" target="_blank">5.110</a></td>
+                                </tr>
+								<tr>
+                                    <td>18-19</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+								<tr>
+                                    <td>20-21</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+								<tr>
+                                    <td>22</td>
+                                    <td>Continuation Record №</td>
+                                    <td><a href="References/5_16_Cont_Record.png" target="_blank">5.16</a></td>
+                                </tr>
+								<tr>
+                                    <td>23-26</td>
+                                    <td>Marker Code</td>
+                                    <td><a href="References/5_111_Marker_Code.png" target="_blank">5.111</a></td>
+                                </tr>
+								<tr>
+                                    <td>27</td>
+                                    <td>Reserved</td>
+                                    <td></td>
+                                </tr>
+								<tr>
+                                    <td>28</td>
+                                    <td>Marker Shape</td>
+                                    <td><a href="References/5_112_Marker_Shape.png" target="_blank">5.112</a></td>
+                                </tr>
+								<tr>
+                                    <td>29</td>
+                                    <td>Marker Power</td>
+                                    <td><a href="References/5_113_Marker_High_Low.png" target="_blank">5.113</a></td>
+                                </tr>
+								<tr>
+                                    <td>30-32</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+								<tr>
+                                    <td>33-41</td>
+                                    <td>Marker Latitude</td>
+                                    <td><a href="References/5_36_Latitude.png" target="_blank">5.36</a></td>
+                                </tr>
+								<tr>
+                                    <td>42-51</td>
+                                    <td>Marker Longitude</td>
+                                    <td><a href="References/5_37_Longitude.png" target="_blank">5.36</a></td>
+                                </tr>
+								<tr>
+                                    <td>52-55</td>
+                                    <td>Minor Axis</td>
+                                    <td><a href="References/5_100_Minor_Axis.png" target="_blank">5.100</a></td>
+                                </tr>
+								<tr>
+                                    <td>56-74</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+								<tr>
+                                    <td>75-79</td>
+                                    <td>Magnetic Variation</td>
+                                    <td><a href="References/5_39_Magnetic_Variation.png" target="_blank">5.39</a></td>
+                                </tr>
+								<tr>
+                                    <td>80-84</td>
+                                    <td>Facility Elevation</td>
+                                    <td><a href="References/5_92_Facility_Elevation.png" target="_blank">5.92</a></td>
+                                </tr>
+								<tr>
+                                    <td>85-87</td>
+                                    <td>Datum Code</td>
+                                    <td><a href="References/5_197_Datum_Code.png" target="_blank">5.197</a></td>
+                                </tr>
+								<tr>
+                                    <td>88-93</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+								<tr>
+                                    <td>94-123</td>
+                                    <td>Marker Name</td>
+                                    <td><a href="References/5_71_Name_Field.png" target="_blank">5.71</a></td>
+                                </tr>
+                            </table>
                         </details>
                         <details>
                             <summary>6 - P - Holding Patterns (EP)</summary>
