Airway Markers (EM) & Holdings (EP)

--- a/start_page.html
+++ b/start_page.html
@@ -624,8 +624,125 @@ tr:nth-child(even) {
                             </table>
                         </details>
                         <details>
-                            <summary>6 - P - Holding Patterns (EP)</summary>
-                            <img src="Tables/EP_Holding_Patterns.png" alt="EP_Holding_Patterns">
+                            <summary>6 - P - Holdings (EP)</summary>
+                            <table>
+								<caption><a href="Tables/EP_Holding_Patterns.png" target="_blank">Holding Primary Records</a></caption>
+                                <tr>
+                                    <th>Column</th>
+                                    <th>Field Name</th>
+                                    <th>Reference</th>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Record Type</td>
+                                    <td><a href="References/5_2_Record_Type.png" target="_blank">5.2</a></td>
+                                </tr>
+								 <tr>
+                                    <td>2-4</td>
+                                    <td>Customer/Area Code</td>
+                                    <td><a href="References/5_3_Customer_Area_Code.png" target="_blank">5.3</a></td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                     <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+								<tr>
+                                    <td>7-10</td>
+                                    <td>Region Code</td>
+                                    <td><a href="References/5_41_Region_Code.png" target="_blank">5.41</a></td>
+                                </tr>
+                                <tr>
+                                    <td>11-12</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+								<tr>
+                                    <td>13-27</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>28-29</td>
+                                    <td>Duplicate Identifier</td>
+                                    <td><a href="References/5_114_Duplicate_Indicator.png" target="_blank">5.114</a></td>
+                                </tr>
+                                <tr>
+                                    <td>30-34</td>
+                                    <td>Fix Identifier</td>
+                                    <td><a href="References/5_13_Fix_Identifier.png" target="_blank">5.13</a></td>
+                                </tr>
+                                <tr>
+                                    <td>35-36</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>37</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>38</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+								<tr>
+                                    <td>39</td>
+                                    <td>Continuation Record №</td>
+                                    <td><a href="References/5_16_Cont_Record.png" target="_blank">5.16</a></td>
+                                </tr>
+								<tr>
+                                    <td>40-43</td>
+                                    <td>Inbound Holding Course</td>
+                                    <td><a href="References/5_62_Inbound_Holding_Course.png" target="_blank">5.62</a></td>
+                                </tr>
+                                <tr>
+                                    <td>44</td>
+                                    <td>Turn Direction</td>
+                                    <td><a href="References/5_63_Turn.png" target="_blank">5.63</a></td>
+                                </tr>
+                                <tr>
+                                    <td>45-47</td>
+                                    <td>Leg Length</td>
+                                    <td><a href="References/5_64_Leg_Length.png" target="_blank">5.64</a></td>
+                                </tr>
+                                <tr>
+                                    <td>48-49</td>
+                                    <td>Leg Time</td>
+                                    <td><a href="References/5_65_Leg_Time.png" target="_blank">5.65</a></td>
+                                </tr>
+                                <tr>
+                                    <td>50-54</td>
+                                    <td>Minimum Altitude</td>
+                                    <td><a href="References/5_30_Altitude_Minimum.png" target="_blank">5.30</a></td>
+                                </tr>
+                                <tr>
+                                    <td>55-59</td>
+                                    <td>Maximum Altitude</td>
+                                    <td><a href="References/5_127_Maximum_Altitude.png" target="_blank">5.127</a></td>
+                                </tr>
+                                <tr>
+                                    <td>60-62</td>
+                                    <td>Holding Speed</td>
+                                    <td><a href="References/5_175_Holding_Speed.png" target="_blank">5.175</a></td>
+                                </tr>
+                                <tr>
+                                    <td>63-98</td>
+                                    <td>Reserved</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>99-123</td>
+                                    <td>Notes</td>
+                                    <td><a href="References/5_60_Notes.png" target="_blank">5.60</a></td>
+                                </tr>
+                            </table>
                         </details>
                         <details>
                             <summary>6 - R - Airways and Routes (ER)</summary>
