Enroute Airways (ER)

--- a/start_page.html
+++ b/start_page.html
@@ -745,8 +745,185 @@ tr:nth-child(even) {
                             </table>
                         </details>
                         <details>
-                            <summary>6 - R - Airways and Routes (ER)</summary>
-                            <img src="Tables/ER_Enroute_Airways.png" alt="ER_Enroute_Airways">
+                            <summary>6 - R - Enroute Airways (ER)</summary>
+                            <table>
+								<caption><a href="Tables/ER_Enroute_Airways.png" target="_blank">Enroute Airways Records</a></caption>
+                                <tr>
+                                    <th>Column</th>
+                                    <th>Field Name</th>
+                                    <th>Reference</th>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Record Type</td>
+                                    <td><a href="References/5_2_Record_Type.png" target="_blank">5.2</a></td>
+                                </tr>
+								 <tr>
+                                    <td>2-4</td>
+                                    <td>Customer/Area Code</td>
+                                    <td><a href="References/5_3_Customer_Area_Code.png" target="_blank">5.3</a></td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+								<tr>
+                                    <td>7-13</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+								<tr>
+                                    <td>14-18</td>
+                                    <td>Route Identifier</td>
+                                    <td><a href="References/5_8_Route_Identifier.png" target="_blank">5.8</a></td>
+                                </tr>
+                                <tr>
+                                    <td>19</td>
+                                    <td>Reserved</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>20-25</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>26-29</td>
+                                    <td>Sequence Number</td>
+                                    <td><a href="References/5_12_Sequence_Number.png" target="_blank">5.12</a></td>
+                                </tr>
+                                <tr>
+                                    <td>30-34</td>
+                                    <td>Fix Identifier</td>
+                                    <td><a href="References/5_13_Fix_Identifier.png" target="_blank">5.13</a></td>
+                                </tr>
+                                <tr>
+                                    <td>35-36</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>37</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>38</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+								<tr>
+                                    <td>39</td>
+                                    <td>Continuation Record №</td>
+                                    <td><a href="References/5_16_Cont_Record.png" target="_blank">5.16</a></td>
+                                </tr>
+								<tr>
+                                    <td>40-43</td>
+                                    <td>Waypoint Description Code</td>
+                                    <td><a href="References/5_17_Waypoint_Description_Code.png" target="_blank">5.17</a></td>
+                                </tr>
+                                <tr>
+                                    <td>44</td>
+                                    <td>Boundary Code</td>
+                                    <td><a href="References/5_18_Boundary_Codes.png" target="_blank">5.18</a></td>
+                                </tr>
+                                <tr>
+                                    <td>45</td>
+                                    <td>Route Type</td>
+                                    <td><a href="References/5_7_Route_Type.png" target="_blank">5.7</a></td>
+                                </tr>
+                                <tr>
+                                    <td>46</td>
+                                    <td>Level</td>
+                                    <td><a href="References/5_19_Level.png" target="_blank">5.19</a></td>
+                                </tr>
+                                <tr>
+                                    <td>47</td>
+                                    <td>Direction Restriction</td>
+                                    <td><a href="References/5_115_Directional_Restriction.png" target="_blank">5.115</a></td>
+                                </tr>
+                                <tr>
+                                    <td>48-49</td>
+                                    <td>Cruise Table Indicator</td>
+                                    <td><a href="References/5_134_Cruise_Table_Indicator.png" target="_blank">5.115</a></td>
+                                </tr>
+                                <tr>
+                                    <td>50</td>
+                                    <td>EU Indicator</td>
+                                    <td><a href="References/5_164_EU_Indicator.png" target="_blank">5.164</a></td>
+                                </tr>
+                                <tr>
+                                    <td>51-54</td>
+                                    <td>Recommended NAVAID</td>
+                                    <td><a href="References/5_23_Recommended_NAVAID.png" target="_blank">5.23</a></td>
+                                </tr>
+                                <tr>
+                                    <td>55-56</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>57-59</td>
+                                    <td>RNP</td>
+                                    <td><a href="References/5_211_RNP.png" target="_blank">5.211</a></td>
+                                </tr>
+                                <tr>
+                                    <td>60-62</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>63-66</td>
+                                    <td>Theta</td>
+                                    <td><a href="References/5_24_Theta.png" target="_blank">5.24</a></td>
+                                </tr>
+                                <tr>
+                                    <td>67-70</td>
+                                    <td>Rho</td>
+                                    <td><a href="References/5_25_Rho.png" target="_blank">5.25</a></td>
+                                </tr>
+                                <tr>
+                                    <td>71-74</td>
+                                    <td>Outbound Magnetic Course</td>
+                                    <td><a href="References/5_26_Outbound_Magnetic_Course.png" target="_blank">5.26</a></td>
+                                </tr>
+                                <tr>
+                                    <td>75-78</td>
+                                    <td>Route Distance From</td>
+                                    <td><a href="References/5_27_Route_Distance_From.png" target="_blank">5.27</a></td>
+                                </tr>
+                                <tr>
+                                    <td>79-82</td>
+                                    <td>Inbound Magnetic Course</td>
+                                    <td><a href="References/5_28_inbound_Magnetic_Course.png" target="_blank">5.28</a></td>
+                                </tr>
+                                <tr>
+                                    <td>83</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>84-88</td>
+                                    <td>Minimum Altitude</td>
+                                    <td><a href="References/5_30_Altitude_Minimum.png" target="_blank">5.30</a></td>
+                                </tr>
+                                <tr>
+                                    <td>89-93</td>
+                                    <td>Minimum Altitude</td>
+                                    <td><a href="References/5_30_Altitude_Minimum.png" target="_blank">5.30</a></td>
+                                </tr>
+                                <tr>
+                                    <td>94-98</td>
+                                    <td>Maximum Altitude</td>
+                                    <td><a href="References/5_127_Maximum_Altitude.png" target="_blank">5.127</a></td>
+                                </tr>
+                            </table>
                         </details>
                         <details>
                             <summary>6 - T - Preferred Routes (ET)</summary>
