Preferred Routes (ET)

--- a/start_page.html
+++ b/start_page.html
@@ -927,7 +927,189 @@ tr:nth-child(even) {
                         </details>
                         <details>
                             <summary>6 - T - Preferred Routes (ET)</summary>
-                            <img src="Tables/ET_Preferred_Routes.png" alt="ET_Preferred_Routes">
+                            <table>
+								<caption><a href="Tables/ET_Preferred_Routes.png" target="_blank">Preferred Route Primary Records</a></caption>
+                                <tr>
+                                    <th>Column</th>
+                                    <th>Field Name</th>
+                                    <th>Reference</th>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Record Type</td>
+                                    <td><a href="References/5_2_Record_Type.png" target="_blank">5.2</a></td>
+                                </tr>
+								 <tr>
+                                    <td>2-4</td>
+                                    <td>Customer/Area Code</td>
+                                    <td><a href="References/5_3_Customer_Area_Code.png" target="_blank">5.3</a></td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+								<tr>
+                                    <td>7-13</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+								<tr>
+                                    <td>14-23</td>
+                                    <td>Route Identifier</td>
+                                    <td><a href="References/5_8_Route_Identifier.png" target="_blank">5.8</a></td>
+                                </tr>
+                                <tr>
+                                    <td>24-25</td>
+                                    <td>Preferred Route Use Indicator</td>
+                                    <td><a href="References/5_220_Pref_Route_Use_Indicator.png" target="_blank">5.220</a></td>
+                                </tr>
+                                <tr>
+                                    <td>26-29</td>
+                                    <td>Sequence Number</td>
+                                    <td><a href="References/5_12_Sequence_Number.png" target="_blank">5.12</a></td>
+                                </tr>
+                                <tr>
+                                    <td>30-38</td>
+                                    <td>Blank (Spacing)</td>
+                                    <td></td>
+                                </tr>
+								<tr>
+                                    <td>39</td>
+                                    <td>Continuation Record №</td>
+                                    <td><a href="References/5_16_Cont_Record.png" target="_blank">5.16</a></td>
+                                </tr>
+								<tr>
+                                    <td>40-44</td>
+                                    <td>To Fix Identifier</td>
+                                    <td><a href="References/5_83_To_Fix.png" target="_blank">5.83</a></td>
+                                </tr>
+                                <tr>
+                                    <td>45-46</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>47</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>48</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+                                <tr>
+                                    <td>49-51</td>
+                                    <td>VIA Code</td>
+                                    <td><a href="References/5_77_VIA_Code.png" target="_blank">5.77</a></td>
+                                </tr>
+                                <tr>
+                                    <td>52-57</td>
+                                    <td>SID/STAR/App/AWY Identifier</td>
+                                    <td><a href="References/5_78_SID_STAR_App_AWY.png" target="_blank">5.78</a></td>
+                                </tr>
+                                <tr>
+                                    <td>58-60</td>
+                                    <td>Area Code</td>
+                                    <td><a href="References/5_3_Customer_Area_Code.png" target="_blank">5.3</a></td>
+                                </tr>
+                                <tr>
+                                    <td>61</td>
+                                    <td>Level</td>
+                                    <td><a href="References/5_19_Level.png" target="_blank">5.19</a></td>
+                                </tr>
+                                <tr>
+                                    <td>62</td>
+                                    <td>Route Type</td>
+                                    <td><a href="References/5_7_Route_Type.png" target="_blank">5.7</a></td>
+                                </tr>
+                                <tr>
+                                    <td>63-67</td>
+                                    <td>Initial Airport / Fix</td>
+                                    <td><a href="References/5_194_Init_Term_Airport_Fix.png" target="_blank">5.194</a></td>
+                                </tr>
+                                <tr>
+                                    <td>68-69</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>70</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>71</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+                                <tr>
+                                    <td>72-76</td>
+                                    <td>Terminus Airport / Fix</td>
+                                    <td><a href="References/5_194_Init_Term_Airport_Fix.png" target="_blank">5.194</a></td>
+                                </tr>
+                                <tr>
+                                    <td>77-78</td>
+                                    <td>ICAO Code</td>
+                                    <td><a href="References/5_14_ICAO_Code.png" target="_blank">5.14</a></td>
+                                </tr>
+                                <tr>
+                                    <td>79</td>
+                                    <td>Section Code</td>
+                                    <td><a href="References/5_4_Section_Code.png" target="_blank">5.4</a></td>
+                                </tr>
+                                <tr>
+                                    <td>80</td>
+                                    <td>Subsection Code</td>
+                                    <td><a href="References/5_5_Subsection_Code.png" target="_blank">5.5</a></td>
+                                </tr>
+                                <tr>
+                                    <td>81-85</td>
+                                    <td>Minimum Altitude</td>
+                                    <td><a href="References/5_30_Altitude_Minimum.png" target="_blank">5.30</a></td>
+                                </tr>
+                                <tr>
+                                    <td>86-90</td>
+                                    <td>Maximum Altitude</td>
+                                    <td><a href="References/5_127_Maximum_Altitude.png" target="_blank">5.127</a></td>
+                                </tr>
+                                <tr>
+                                    <td>91</td>
+                                    <td>Time Code</td>
+                                    <td><a href="References/5_131_Time_Code.png" target="_blank">5.131</a></td>
+                                </tr>
+                                <tr>
+                                    <td>92-93</td>
+                                    <td>Aircraft Use Group</td>
+                                    <td><a href="References/5_221_Aircraft_Use_Group.png" target="_blank">5.221</a></td>
+                                </tr>
+                                <tr>
+                                    <td>94</td>
+                                    <td>Direction Restriction</td>
+                                    <td><a href="References/5_115_Directional_Restriction.png" target="_blank">5.115</a></td>
+                                </tr>
+                                <tr>
+                                    <td>95</td>
+                                    <td>Altitude Description</td>
+                                    <td><a href="References/5_29_Altitude_Description.png" target="_blank">5.29</a></td>
+                                </tr>
+                                <tr>
+                                    <td>96-100</td>
+                                    <td>Altitude One</td>
+                                    <td><a href="References/5_30_Altitude_Minimum.png" target="_blank">5.30</a></td>
+                                </tr>
+                                <tr>
+                                    <td>101-105</td>
+                                    <td>Altitude Two</td>
+                                    <td><a href="References/5_30_Altitude_Minimum.png" target="_blank">5.30</a></td>
+                                </tr>
+                            </table>
                         </details>
                         <details>
                             <summary>6 - U - Airway Restrictions (EU)</summary>
